node-port-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-diffusion-service
  namespace: intern # DaemonSet과 동일한 네임스페이스
spec:
  selector:
    app: stable-diffusion # DaemonSet과 일치하는 레이블
  type: NodePort
  ports:
    - port: 8000 # Pod에서 사용 중인 포트
      targetPort: 8000 # Pod에서 노출하는 포트
      nodePort: 30123 # 클러스터 노드에서 노출할 포트
